fix: align checkboxes in grid

--- a/frappe/public/scss/grid.scss
+++ b/frappe/public/scss/grid.scss
@@ -77,6 +77,10 @@
 	// border-right: 1px solid var(--border-color);
 }
 
+.grid-row-check {
+	margin-top: 2px;
+}
+
 .editable-form .grid-static-col.bold {
 	font-weight: bold;
 }
